--- a/.github/workflows/examen.yml
+++ b/.github/workflows/examen.yml
@@ -43,3 +43,29 @@ jobs:
             docker stop web && docker rm web
             docker rmi ${{ secrets.DH_USUARIO }}/fastapi
             docker run -d -p 80:8000 --name web ${{ secrets.DH_USUARIO }}/fastapi
+
+  test:
+    name: probar aplicación
+    runs-on: ubuntu-latest
+    needs: aws
+    steps:
+      - name: probar aplicación
+        uses: appleboy/ssh-action@master
+        with:
+          host: ${{ secrets.AMZ_IP }}
+          username: ${{ secrets.AMZ_USUARIO }}
+          key: ${{ secrets.AMZ_CLAVE }}
+          port: 22
+          script: |
+            sleep 10
+            if curl -s http://localhost:80/status; then
+              echo "Aplicacion lanzada correctamente"
+            else
+              echo "Failed to run the application"
+            fi
+            sleep 10
+            if curl -s http://localhost:80/studens/1; then
+              echo "Aplicacion lanzada correctamente"
+            else
+              echo "Failed to run the application"
+            fi
