--- a/.github/workflows/examen.yml
+++ b/.github/workflows/examen.yml
@@ -17,9 +17,10 @@ jobs:
        uses: actions/setup-python@v4
        with:
         python-version: "3.11"
-     - name: pylint
-       uses: py-actions/pylint@v2
-       with:
+     - name: Run pylint
+       uses: actions/checkout@v2
+       run: |
+        pip install pylint
         args: "--disable=C0116,W0622"
 
   build:
